option('MQTT_BUILD_EXAMPLES', type : 'boolean', value : false, description : 'Enable building example applications')
option('MQTT_BUILD_TESTS', type : 'boolean', value : false, description : 'Enable building test applications')
option('MQTT_ALWAYS_SEND_REASON_CODE', type : 'boolean', value : false, description : 'Always send a reason code, even if the standard says it may be optionally omitted.')
option('MQTT_USE_STATIC_BOOST', type : 'boolean', value : false, description : 'Statically link with boost libraries')
option('MQTT_USE_STATIC_OPENSSL', type : 'boolean', value : false, description : 'Statically link with openssl libraries')
option('MQTT_USE_TLS', type : 'boolean', value : false, description : 'Enable building TLS code')
option('MQTT_USE_WS', type : 'boolean', value : false, description : 'Enable building WebSockets code')
option('MQTT_USE_STR_CHECK', type : 'boolean', value : false, description : 'Enable UTF8 String check')
option('MQTT_STD_VARIANT', type : 'boolean', value : false, description : 'Use std::variant from C++17 instead of boost::variant')
option('MQTT_STD_OPTIONAL', type : 'boolean', value : false, description : 'Use std::optional from C++17 instead of boost::optional')
option('MQTT_STD_STRING_VIEW', type : 'boolean', value : false, description : 'Use std::string_view from C++17 instead of boost::string_view')
option('MQTT_STD_ANY', type : 'boolean', value : false, description : 'Use std::any from C++17 instead of boost::any')
option('MQTT_STD_SHARED_PTR_ARRAY', type : 'boolean', value : false, description : 'Use std::shared_ptr<char[]> from C++17 instead of boost::shared_ptr<char[]>')
option('MQTT_DISABLE_LIBSTDCXX_TUPLE_ANY_WORKAROUND', type : 'boolean', value : false, description : 'std::tuple<std::any> workaround for libstdc++')

option('MQTT_TEST_1', type : 'boolean', value : true, description : 'Build test part1')
option('MQTT_TEST_2', type : 'boolean', value : true, description : 'Build test part2')
option('MQTT_TEST_3', type : 'boolean', value : true, description : 'Build test part3')
option('MQTT_TEST_4', type : 'boolean', value : true, description : 'Build test part4')
option('MQTT_TEST_5', type : 'boolean', value : true, description : 'Build test part5')
option('MQTT_TEST_6', type : 'boolean', value : true, description : 'Build test part6')
option('MQTT_TEST_7', type : 'boolean', value : true, description : 'Build test part7')
